Squeezed in a simple method to create new bullets. the whole editview class needs a rewriting. we need to remember the startposition of all different kinds of spans and need to check where we landed as soon as the cursor gets moved around. but for now, this should be fine and work without crashes and data loss